2002-07-01  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (EmitFieldAccess): Eliminate code duplication,
	by deferring to LoadVariable.
	(LoadVariable): Fix handling of constant variables - bug
	2991. Also, fix shadow variable handling.
	* src/error.cpp (ENCLOSING_INSTANCE_ACCESS_ACROSS_STATIC_REGION):
	Improve error message wording.
	* src/expr.cpp (FindLocalVariable, FindEnclosingInstance),
	(CreateAccessToType): Improve variable resolution to detect
	anonymous classes in static regions.
	(UpdateLocalConstructors, GetAnonymousType),
	(ProcessClassInstanceCreationExpression): Improve shadow variable
	handling - bug 2986.

2002-07-01  Eric Blake  <ebb9@email.byu.edu>

	* src/body.cpp (ProcessExecutableBodies):
	* src/decl.cpp (CompleteSymbolTable, InitializeVariable),
	(ProcessInitializer, ProcessStaticInitializers),
	(ProcessInstanceInitializers):
	* src/definite.cpp: Refactor definite assignment of fields to use
	O(n) performance instead of O(n^2) performance, as well as saving
	assignment status on a stack - bugs 118, 500.
	* src/error.cpp:
	* src/error.h (FINAL_FIELD_ASSIGNMENT_NOT_SIMPLE): Add an error
	message as part of the definite assignment fix.
	* src/expr.cpp (CheckSimpleName, ProcessSimpleName),
	(FindVariableMember, ProcessAssignmentExpression): Fix remaining
	cases of accessing a field before declaration - bug 603.
	* src/init.cpp: Improve constant variable analysis - bug 2991.
	* src/semantic.h (SemanticEnvironment): Move definite assignment
	status here, to store state on the stack, necessary for processing
	anonymous classes inline.
	(Semantic): Change definite assignment to use the state stack.
	* src/set.h (BitSet, DefinitePair): Improve functionality to be
	more efficient by allowing resizing, as well as fix a few bugs in
	things like operator==.
	* src/symbol.cpp (LocalVariableIndex): Add method to allow the
	definite assignment analysis speedup.
	* src/symbol.h (MarkIncomplete, *Assigned): Delete methods that